# ara_navigation

./: README.md
PID_wheelControl/: PID_wheelControl.ino
encoders/: encoders.ino
pahap/: CMakeLists.txt  package.xml
pahap/launch/: pahap.launch
pahap/scripts/: graphEstimation.py  rrtServer.py  segmentServer.py
pahap/src/: actionServer_example.cpp  pahap.cpp
src/ara_control/: CMakeLists.txt  package.xml
src/ara_control/action/: araControl.action
src/ara_control/include/araControl/: araControl.h
src/ara_control/launch/: main.launch
src/ara_control/src/: 6DOF.cpp  araClient.cpp  araControl.cpp  check_magarr.cpp  clientNode_class.cpp  icra21.cpp  keyboard.cpp  main.cpp  main_icra21.cpp  main_manual.cpp  process_trajectory.cpp
src/ara_control/srv/: magarr_controller.srv  nextPose_move.srv
src/rosserial_python/: CMakeLists.txt
src/rosserial_python/nodes/: serial_node.py  serial_node_1.py  serial_node_2.py  serial_node_3.py  serial_node_4.py  serial_node_5.py
